fixed drop shadow and links spacing

--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,10 +1,6 @@
 .stroke {
   text-shadow:
-       3px 3px 0 #000,
-     -1px -1px 0 #000,
-      1px -1px 0 #000,
-      -1px 1px 0 #000,
-       1px 1px 0 #000;
+      3px 3px 5px rgba(0, 0, 0, 1);
 }
 
 body, html {
@@ -31,7 +27,7 @@ p {
 }
 
 .p2 {
-  height:225px;
+  height:200px;
 }
 
 .p3 {
